Second chapter added

--- a/Efremov_Diploma.tex
+++ b/Efremov_Diploma.tex
@@ -205,24 +205,11 @@ top=2cm,bottom=2cm]{geometry}
 	
 \end{figure}
 
-kdmcsjocndc 
-Здесь должна быть динамика роста рынка строительства фактическая, сколько ввели, актуальность строек
-Количество действующих кредитных договоров на конец 2021 года - 1 383
-
-19\% приходится на Москву и Московскую область
-
-Общая сумма действующих кредитных договоров - 6 247 550,0 млн. рублей
-
-Рост за 2021 год на 113\% по количеству, и на 129\% по объему
-
-В реестре проблемных застройщиков числятся – 650 организаций в 66 регионах РФ.
-
-
-
-\subsubsection{Проект 1}
-
-
-\subsubsection{Проект 2}
+На 21 апреля 2022г. в процессе строительства находится около 95 млн.~$\text{м}^2$ и только строительство 3,5\% от суммарной площади финансируется без привлечения средств граждан.[дом.рф]
+ 
+Количество действующих договоров проектного финансирования на 1 марта 2022 года - 5273 по всей России.[ЦБ] Общая сумма действующих кредитных договоров - 7 813 578,8 млн. рублей.
+Рост за год по сравнению с данными на 1 марта 2021 года - на 96\% по количеству, и на 139\% по объему.
+При этом на Москву и Московскую область приходится около 20\% заключенных договоров, сумма которых составляет 57\% от всех выданных займов. То есть можно говорить о существенном перевесе в пользу Московского региона, относительно всей России и высоких темпах роста рынка, и в Московском регионе в частности. Однако, к сожалению, не все объекты строительства одинаково успешны и есть тенденция роста проблемных проектов. Так в реестре проблемных застройщиков числятся – 650 организаций в 66 регионах РФ. И на фоне ограниченности ресурсов, сбоя налаженных логистических поставок и роста ставок по кредитам этот реестр будет только пополняться. В частности поэтому, сейчас, как никогда, банку важно вовремя выявить проблемного застройщика и успеть принять превентивные меры, до того как он перестанет платить по счетам или не сможет далее вести деятельность.  
 
 \subsection{Текущее состояние финансирования в сфере жилищного строительства}
 
@@ -264,7 +251,8 @@ kdmcsjocndc
 
 При применении данного подхода застройщик финансирует проект за счет собственных средств и банковских кредитов, а деньги дольщиков за проданные квартиры, хранящиеся на эскроу-счетах,  получает после сдачи проекта в эксплуатацию. 
 
-По данным Банка России, уже на начало сентября 2020г. в банках было открыто почти 180 тыс счетов эскроу, на которых аккумулированно более 600 млрд. руб. При этом банки одобрили финансирование на 1,8 трлн руб., при общем объеме ссудной задолжности 667 млрд руб. По данным Банка России, средняя процентная ставка кредитной линии проектного финансирования составляла 4-6\% для договоров, заключенных до марта 2022 года. Средний срок рассмотрения заявки 30-45 дней. Особенность кредитования с применением счетов-эскроу заключается в том, что при значительном размере поступлений денежных средств участников долевого строительства на счета эскроу - ставка по кредиту снижается, в пределе она может быть снижена до 0.01\%.
+По данным Банка России, уже на начало сентября 2020г. в банках было открыто почти 180 тыс счетов эскроу, на которых аккумулированно более 600 млрд. руб. При этом банки одобрили финансирование на 1,8 трлн руб., при общем объеме ссудной задолжности 667 млрд руб. А по состоянию на 1 марта 2022 года количество эскроу-счетов составило более 681 тыс, при объеме аккумулированных на этих счетах средств более 3,39 трлн. рублей. 
+По данным Банка России, средняя процентная ставка кредитной линии проектного финансирования составляла 4-6\% для договоров, заключенных до марта 2022 года. Средний срок рассмотрения заявки 30-45 дней. Особенность кредитования с применением счетов-эскроу заключается в том, что при значительном размере поступлений денежных средств участников долевого строительства на счета эскроу - ставка по кредиту снижается, в пределе она может быть снижена до 0.01\%.
 
 \begin{figure}[h]
 	
